tests/dupe-ty-var-datatype/out.txt
error: duplicate type variable: 'a
  ┌─ err.sml:1:15
  │
1 │ datatype ('a, 'a) t = A of 'a
  │               ^^

typechecking failed
